[workspace]

members = [
    "examples",
    "iron",
    "logger",
    "mount",
    "persistent",
    "router",
]
[patch.crates-io.rand_core]
path = "vendor/rand_core"

[patch.crates-io.rand_core01]
path = "vendor/rand_core-0.3.1"
package = "rand_core"

[patch.crates-io.hyper]
path = "vendor/hyper-0.10.16"
package = "hyper"

[patch.crates-io.rand_hc]
path = "vendor/rand_hc"
package = "rand_hc"

[patch.crates-io.regex]
path = "vendor/regex"
package = "regex"

[patch.crates-io.crossbeam-queue]
path = "vendor/crossbeam-queue"
package = "crossbeam-queue"

[patch.crates-io.crossbeam-deque]
path = "vendor/crossbeam-deque"
package = "crossbeam-deque"

[patch.crates-io.siphasher]
path = "vendor/siphasher"
package = "siphasher"

[patch.crates-io.httparse]
path = "vendor/httparse"
package = "httparse"

