[package]
name = "warp"
version = "0.3.1" # don't forget to update html_root_url
description = "serve the web at warp speeds"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/warp"
repository = "https://github.com/seanmonstar/warp"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "hyper"]
autotests = true
autoexamples = true
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-compression = { version = "0.3.7", features = ["brotli", "deflate", "gzip", "tokio"], optional = true }
bytes = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
headers = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0"
multipart = { version = "0.17", default-features = false, features = ["server"], optional = true }
scoped-tls = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["fs", "sync", "time"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.6", features = ["io"] }
tracing = { version = "0.1.21", default-features = false, features = ["log", "std"] }
tower-service = "0.3"
# tls is enabled by default, we don't want that yet
tokio-tungstenite = { version = "0.13", default-features = false, optional = true }
percent-encoding = "2.1"
pin-project = "1.0"
tokio-rustls = { version = "0.22", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"
tracing-subscriber = "0.2.7"
tracing-log = "0.1"
serde_derive = "1.0"
handlebars = "3.0.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
listenfd = "0.3"

[features]
default = ["multipart", "websocket"]
websocket = ["tokio-tungstenite"]
tls = ["tokio-rustls"]
compression = ["async-compression"]

[[bin]]
name="hello"
path="examples/hello.rs"

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[test]]
name = "multipart"
required-features = ["multipart"]

[[test]]
name = "ws"
required-features = ["websocket"]

[[example]]
name = "compression"
required-features = ["compression"]

[[example]]
name = "unix_socket"

[[example]]
name = "websockets"
required-features = ["websocket"]

[[example]]
name = "websockets_chat"
required-features = ["websocket"]

[[example]]
name = "query_string"
[patch.crates-io.generic-array]
path = "vendor/generic-array"

[patch.crates-io.generic-array01]
path = "vendor/generic-array-0.12.4"
package = "generic-array"

[patch.crates-io.rand_core]
path = "vendor/rand_core"

[patch.crates-io.rand_core01]
path = "vendor/rand_core-0.5.1"
package = "rand_core"

[patch.crates-io.rand_hc]
path = "vendor/rand_hc-0.2.0"
package = "rand_hc"

[patch.crates-io.ryu]
path = "vendor/ryu"
package = "ryu"

[patch.crates-io.twoway]
path = "vendor/twoway"
package = "twoway"

[patch.crates-io.thread_local]
path = "vendor/thread_local"
package = "thread_local"

[patch.crates-io.brotli-decompressor]
path = "vendor/brotli-decompressor"
package = "brotli-decompressor"

[patch.crates-io.regex]
path = "vendor/regex"
package = "regex"

[patch.crates-io.http]
path = "vendor/http"
package = "http"

[patch.crates-io.rand]
path = "vendor/rand"
package = "rand"

[patch.crates-io.bumpalo]
path = "vendor/bumpalo"
package = "bumpalo"

[patch.crates-io.httparse]
path = "vendor/httparse"
package = "httparse"

